--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
-    "drizzle-orm": "^0.31.4",
+    "drizzle-orm": "^0.32.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.407.0",
     "next": "^14.2.4",
@@ -58,7 +58,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
-    "drizzle-kit": "^0.22.8",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -67,5 +67,6 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
-  }
+  },
+  "packageManager": "pnpm@9.5.0"
 }
