--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.50.1",
-    "@trpc/client": "^11.0.0-rc.452",
-    "@trpc/react-query": "^11.0.0-rc.452",
-    "@trpc/server": "^11.0.0-rc.452",
+    "@tanstack/react-query": "^5.51.1",
+    "@trpc/client": "^11.0.0-rc.456",
+    "@trpc/react-query": "^11.0.0-rc.456",
+    "@trpc/server": "^11.0.0-rc.456",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,7 +38,7 @@
     "drizzle-orm": "^0.32.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.407.0",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -49,6 +50,7 @@
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
@@ -61,7 +63,7 @@
     "@typescript-eslint/parser": "^7.16.0",
     "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
+    "eslint-config-next": "^14.2.5",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
