--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.407.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
+    "next-usequerystate": "^1.17.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
